--- a/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_apply-evaluations.scss
+++ b/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_apply-evaluations.scss
@@ -12,6 +12,10 @@
         margin-top: size(20);
     }
 
+    .field__waitlist {
+        text-align: start;
+    }
+    
     .field__input[type=checkbox] {
         width: size(29.6);
     }
