--- a/api/mapas/src/themes/BaseV2/assets-src/sass/0.settings/_variables.scss
+++ b/api/mapas/src/themes/BaseV2/assets-src/sass/0.settings/_variables.scss
@@ -15,25 +15,25 @@ $gray-500: color.mix($gray-300, $gray-700, 50%) !default;
 $lightness-300: 25% !default;
 $lightness-700: 25% !default;
 
-// Brand colors
-$primary-500: #117C83 !default;
+// Brand color
+$primary-500: #522c0f !default;
 $primary-300: lighten($primary-500, $lightness-300) !default;
 $primary-700: darken($primary-500, $lightness-700) !default;
 
-$secondary-500: #D14526 !default;
+$secondary-500: #f5c800 !default;
 $secondary-300: lighten($secondary-500, $lightness-300) !default;
 $secondary-700: darken($secondary-500, $lightness-700) !default;
 
 // Entities colors
-$seals-500: #1E1E1E !default;
+$seals-500: #ff0000 !default;
 $seals-300: lighten($seals-500, $lightness-300) !default;
 $seals-700: darken($seals-500, $lightness-700) !default;
 
-$agents-500: #EF7B45 !default;
+$agents-500: #00d200 !default;
 $agents-300: lighten($agents-500, $lightness-300) !default;
 $agents-700: darken($agents-500, $lightness-700) !default;
 
-$events-500: #9C4EC7 !default;
+$events-500: #0096ff !default;
 $events-300: lighten($events-500, $lightness-300) !default;
 $events-700: darken($events-500, $lightness-700) !default;
 
@@ -41,7 +41,7 @@ $opportunities-500: #D14526 !default;
 $opportunities-300: lighten($opportunities-500, $lightness-300) !default;
 $opportunities-700: darken($opportunities-500, $lightness-700) !default;
 
-$projects-500:  #117C83!default;
+$projects-500:  #ff4c4c!default;
 $projects-300: lighten($projects-500, $lightness-300) !default;
 $projects-700: darken($projects-500, $lightness-700) !default;
 
@@ -71,7 +71,7 @@ $helper-500: #0074C1 !default;
 $helper-300: lighten($helper-500, $lightness-300) !default;
 $helper-700: darken($helper-500, $lightness-700) !default;
 
-// Home 
+// Home
 $home-opportunities: $secondary-500 !default;
 $home-entities: $gray-100 !default;
 $home-feature: $secondary-300 !default;
