--- a/src/themes/BaseV2/assets-src/sass/2.components/_panel--last-registrations.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_panel--last-registrations.scss
@@ -41,6 +41,12 @@
                         display: none;
                     }
                 }
+                &__prev--in-active,
+                &__next--in-active {
+                    cursor: default;
+                    opacity: .3;
+                    pointer-events: none;
+                }
             }
             
             .card {
