fix: correção de textos usados no thema

--- a/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_mc-loading.scss
+++ b/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_mc-loading.scss
@@ -9,9 +9,15 @@
     line-height: size(25);
     margin: 0 auto;
     justify-content: center;
-    
+    color: var(--mc-white);
+
     .iconify {
         font-size: size(40);
+        color: var(--mc-white);
+    }
+
+    text {
+        color: var(--mc-white);
     }
 
 }
