Remove da visão pública da oportunidade os administradores

--- a/api/mapas/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
+++ b/api/mapas/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
@@ -205,6 +205,7 @@
     display: none;
 }
 
+.container.opportunity .entity-related-agents,
 .container.opportunity .entity-terms,
 .single-opportunity .mc-breadcrumb {
     display: none;
