--- a/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_entity-header.scss
+++ b/api/mapas/src/themes/BaseV2/assets-src/sass/2.components/_entity-header.scss
@@ -181,15 +181,16 @@
                     font-weight: 600;
                     font-size: 14px;
                     line-height: 19px;
+                    display: none !important;
 
                     &--id {
                         font-weight: 600;
                         font-size: 14px;
                         line-height: 19px;
                     }
-                    
+
                 }
-                
+
                 dl {
                     display: inline-block;
                     margin: size(8) size(40) size(16) 0;
