feat: organiza novo posicionamento cover e profile

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
@@ -13,9 +13,18 @@
 
     .mc-image-uploader {
         width: 100%;
+
+        & > * {
+            cursor: pointer;
+        }
+        &:hover {
+            background-color: rgba(0, 0, 0, .2);
+        }
     }
 
     &__cover{
+        margin-bottom: size(25);
+        
         &--img {
             align-items: center;
             aspect-ratio: 3/1;
@@ -40,7 +49,7 @@
                 opacity: 0;
                 padding: size(5) size(10);
                 position: absolute;
-                background-color: rgba(0, 0, 0, .3);
+                // background-color: rgba(0, 0, 0, .3);
                 transition: opacity .1s ease-in;
                 z-index: 1;
             }
@@ -84,9 +93,6 @@
             padding: size(25) 0;
             & > * {
                 cursor: pointer;
-            }
-            &:hover {
-                background-color: rgba(0, 0, 0, .2);
             }
         }
     }
