--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
@@ -19,6 +19,7 @@
         }
 
         &--img {
+            z-index: 99;
             align-items: center;
             background-color: var(--mc-gray-500);
             border-radius: 50%;
