feat: organiza novo posicionamento cover e profile

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
@@ -19,6 +19,7 @@
         }
 
         &--img {
+            z-index: 99;
             align-items: center;
             border: 1px solid #666666;
             background-color: var(--mc-white);
