feat: add novo icone imagem e atualiza label cor

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
@@ -90,6 +90,9 @@
             flex-direction: column;
             gap: size(10);
             padding: size(25) 0;
+            color: var(--mc-primary-500);
+            font-weight: bold;
+
             & > * {
                 cursor: pointer;
             }
