feat: adiciona style cover e imagem do perfil de acordo com o figma

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-profile.scss
@@ -20,9 +20,10 @@
 
         &--img {
             align-items: center;
-            background-color: var(--mc-gray-500);
+            border: 1px solid #666666;
+            background-color: var(--mc-white);
             border-radius: 50%;
-            color: var(--mc-white);
+            color: var(--mc-primary-500);
             cursor: pointer;
             display: flex;
             font-size: size(50);
