--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
@@ -2,7 +2,7 @@
 
 .entity-cover {
     align-items: center;    
-    border: size(1) dashed var(--mc-gray-500);
+    border: size(1) solid var(--mc-gray-500);
     border-radius: var(--mc-border-radius-sm);
     cursor: pointer;
     display: flex;
