--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-cover.scss
@@ -10,16 +10,17 @@
     justify-content: center;
     overflow: hidden;
     width: 100%;
+    height: size(130);
+
+    & > * {
+        cursor: pointer;
+    }
+    &:hover {
+        background-color: rgba(0, 0, 0, .2);
+    }
 
     .mc-image-uploader {
         width: 100%;
-
-        & > * {
-            cursor: pointer;
-        }
-        &:hover {
-            background-color: rgba(0, 0, 0, .2);
-        }
     }
 
     &__cover{
