--- a/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
@@ -12,12 +12,26 @@
 
 .controller-agent.action-edit {
     .mc-card__title {
+        h3 {
+            color: var(--mc-primary-500);   
+            border-bottom: 1px solid #bbbbbb;  
+            padding-bottom: size(15);  
+        }
+
+        .divider {
+            padding: size(10);
+            border-bottom: 1px solid #bbbbbb;
+        }
+
         p {
             font-family: 'Open Sans';
             font-style: normal;
-            font-weight: 600;
             font-size: size(14);
             line-height: size(19);
+            margin-top: size(15);
+            color: #1E1E1E;
+            border-bottom: 1px solid #bbbbbb;  
+            padding-bottom: size(15);  
         }
     }
 
