--- a/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
@@ -10,6 +10,11 @@
     }
 }
 
+.dvd {
+    padding: size(20);
+    border-bottom: 1px solid #bbbbbb;
+}
+
 .controller-agent.action-edit {
     .mc-card__title {
         h3 {
@@ -18,10 +23,6 @@
             padding-bottom: size(15);  
         }
 
-        .divider {
-            padding: size(10);
-            border-bottom: 1px solid #bbbbbb;
-        }
 
         p {
             font-family: 'Open Sans';
