feat: adiciona template title do card apenas para agente

--- a/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
@@ -16,30 +16,104 @@
 }
 
 .controller-agent.action-edit {
-    .mc-card__title {
-        h3 {
-            color: var(--mc-primary-500);   
-            border-bottom: 1px solid #bbbbbb;  
-            padding-bottom: size(15);  
+    .mc-card {
+        padding: 0;
+        background-color: var(--mc-white);
+        border-radius: var(--mc-border-radius-sm);
+        width: 100%;
+
+        &__title {
+            margin-bottom: 0;
+            padding-bottom: 0;
+
+            h3 {
+                padding: size(18) size(18) size(18) size(25);
+                color: var(--mc-primary-500);   
+                border-bottom: 1px solid #bbbbbb;  
+            }
+    
+            label {
+                font-weight: 700;
+                font-size: size(24);
+                line-height: size(28);
+            }
+    
+            p {
+                margin: size(8) 0 0;
+                font-size: size(14);
+                line-height: size(19);
+            }
         }
 
-
-        p {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-size: size(14);
-            line-height: size(19);
-            margin-top: size(15);
-            color: #1E1E1E;
-            border-bottom: 1px solid #bbbbbb;  
-            padding-bottom: size(15);  
+        &.feature__full {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            
+            @media (max-width: size(800)) {
+                grid-template-columns: 100%;
+                grid-column-end: 2;
+            }
+    
+            .mc-card__content {
+                display: grid;
+                flex-wrap: wrap;
+                padding-left: size(24);
+                padding-right: size(24);
+    
+                @media (max-width: size(800)) {
+                    grid-template-columns: 100%;
+                    gap: size(20);
+                }
+    
+                .card_profile {
+                    margin-top: -65px;
+                }
+                
+                .left {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                }
+        
+                .divider {
+                    border-right: size(1) solid var(--mc-gray-300);
+                    margin: 0 auto;
+                    width: size(1);
+                    height: 100%;
+        
+                    @media (max-width: size(800)) {
+                        border-bottom: 1px solid var(--mc-gray-300);
+                        height: size(1);
+                        width: 100%;
+                    }
+                }
+        
+                .right {
+                    display: flex;
+                    flex-direction: column;
+                    gap: size(40);
+                    width: 100%;
+                }
+            }  
         }
+    
+    }
+
+    .mc-card__card_info {
+        padding-top: size(18);
+        padding-bottom: size(18);
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-size: size(14);
+        line-height: size(19);
+        color: #1E1E1E;
+        border-bottom: 1px solid #bbbbbb;  
     }
 
     .content {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: size(21) 0;
+        gap: size(25);
         justify-items: start;
     }
 
