--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-header.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-header.scss
@@ -1,385 +1,384 @@
-@use '../0.settings/mixins' as *;
+@use "../0.settings/mixins" as *;
 
 .entity-header {
-    background-color: var(--mc-white);
-    margin: 0 auto;
-    position: relative;
-    width: 100%;
-    
-    @media (max-width: size(500)){
-        &__title {
-            text-align: center;
-        }
-    }
-    &__single {
-        margin: 0 auto;
-        max-width: 1170px;
-        position: relative;
+	background-color: var(--mc-white);
+	margin: 0 auto;
+	position: relative;
+	width: 100%;
 
-        &--cover {
-            aspect-ratio: 3/1;
-            background-color: var(--mc-gray-300);
-            background-image: var(--url);
-            background-position: center;
-            background-size: cover;
-            max-width: 1170px;
-            margin: 0 auto;
-            padding: size(10);
-            position: relative;
-            width: 100%;
+	@media (max-width: size(500)) {
+		&__title {
+			text-align: center;
+		}
+	}
+	&__single {
+		margin: 0 auto;
+		max-width: 1170px;
+		position: relative;
 
-            .iconify {
-                font-size: size(76);
-                color: white;
-                position: absolute;
-                top: calc(50% - (size(76) / 2));
-                left: calc(50% - (size(64) / 2));
-            }
-        }
+		&--cover {
+			aspect-ratio: 3/1;
+			background-color: var(--mc-gray-300);
+			background-image: var(--url);
+			background-position: center;
+			background-size: cover;
+			max-width: 1170px;
+			margin: 0 auto;
+			padding: size(10);
+			position: relative;
+			width: 100%;
 
-        &--content {
-            display: flex;
-            max-width: size(1170);
-            margin: 0 auto;
-            padding: 0 size(16);
+			.iconify {
+				font-size: size(76);
+				color: white;
+				position: absolute;
+				top: calc(50% - (size(76) / 2));
+				left: calc(50% - (size(64) / 2));
+			}
+		}
 
-            .leftSide {
-                z-index: 1;
+		&--content {
+			display: flex;
+			max-width: size(1170);
+			margin: 0 auto;
+			padding: 0 size(16);
 
-                .avatar {
-                    align-items: center;
-                    background-color: var(--mc-gray-500);
-                    border-radius: 50%;
-                    display: flex;
-                    justify-content: center;
-                    object-fit: cover;
-                    overflow: hidden;
+			.leftSide {
+				z-index: 1;
 
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        z-index: 1;
-                    }
+				.avatar {
+					align-items: center;
+					background-color: var(--mc-gray-500);
+					border-radius: 50%;
+					display: flex;
+					justify-content: center;
+					object-fit: cover;
+					overflow: hidden;
 
-                    svg {
-                        font-size: size(80);
-                        color: var(--mc-white);
-                    }
+					img {
+						width: 100%;
+						height: 100%;
+						z-index: 1;
+					}
 
-                    @include mobile {
-                        height: size(113);
-                        margin: size(-48) auto size(16);
-                        width: size(113);
-                    }
+					svg {
+						font-size: size(80);
+						color: var(--mc-white);
+					}
 
-                    @include desktop {
-                        height: size(167);
-                        margin: size(-80) size(32) size(22) size(16);
-                        width: size(167);
-                    }
-                }
-            }
+					@include mobile {
+						height: size(113);
+						margin: size(-48) auto size(16);
+						width: size(113);
+					}
 
-            .rightSide {
-                padding: 10px 0 0;
+					@include desktop {
+						height: size(167);
+						margin: size(-80) size(32) size(22) size(16);
+						width: size(167);
+					}
+				}
+			}
 
-                .site {
-                    display: flex;
-                    flex-direction: column;
-                    margin-top: size(--mc-font-size-xs);
+			.rightSide {
+				padding: 10px 0 0;
 
-                    .iconify {
-                        margin-right: size(7);
-                        font-size: size(22.5);
-                    }
+				.site {
+					display: flex;
+					flex-direction: column;
+					margin-top: size(--mc-font-size-xs);
 
-                    a {
-                        align-items: center;
-                        display: flex;
-                        text-decoration: none;
-                        font-weight: 600;
-                        color: var(--mc-low-500);
-                    }
-                }
+					.iconify {
+						margin-right: size(7);
+						font-size: size(22.5);
+					}
 
-                .title {
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: size(48);
-                    line-height: size(65);
-                    margin-top: size(10);
-                    @include mobile {
-                        font-size: size(24);
-                        line-height: size(33);
-                        text-align: center;
-                        margin: 0;
-                    }
-                }
+					a {
+						align-items: center;
+						display: flex;
+						text-decoration: none;
+						font-weight: 600;
+						color: var($helper-500);
+					}
+				}
 
-                .share-mobile {
-                    display: none !important;
-                    gap: size(4) !important;
-                    max-width: unset !important;
+				.title {
+					font-style: normal;
+					font-weight: 700;
+					font-size: size(48);
+					line-height: size(65);
+					margin-top: size(10);
+					@include mobile {
+						font-size: size(24);
+						line-height: size(33);
+						text-align: center;
+						margin: 0;
+					}
+				}
 
-                    @include mobile {
-                        display: flex !important;
-                        margin: size(3) 0 size(11);
-                    }
-                }
+				.share-mobile {
+					display: none !important;
+					gap: size(4) !important;
+					max-width: unset !important;
 
-                .description {
-                    word-break: break-word;
-                    white-space: pre-line;
+					@include mobile {
+						display: flex !important;
+						margin: size(3) 0 size(11);
+					}
+				}
 
-                    p {
-                        line-height: size(18);
-                        margin: 0;
-                    }
+				.description {
+					word-break: break-word;
+					white-space: pre-line;
 
-                    @media (max-width : size(900)) {
-                        font-size: size(14);
-                        line-height: size(16);
-                    }
-                    &--event {
-                        padding-bottom: size(16);
-                    }
-                }
-            }
+					p {
+						line-height: size(18);
+						margin: 0;
+					}
 
-            .share {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: size(7) size(9);
-                max-width: size(167);
+					@media (max-width: size(900)) {
+						font-size: size(14);
+						line-height: size(16);
+					}
+					&--event {
+						padding-bottom: size(16);
+					}
+				}
+			}
 
-                .button {
-                    color: var(--mc-gray-700);
-                    padding: size(10);
-                    color: #3E3E3E;
+			.share {
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: center;
+				gap: size(7) size(9);
+				max-width: size(167);
 
-                    .iconify {
-                        font-size: size(18);
-                    }
-                }
+				.button {
+					color: var(--mc-gray-700);
+					padding: size(10);
+					color: #3e3e3e;
 
-                @include desktop {
-                    margin: size(16) size(32) size(22) size(16);
-                }
+					.iconify {
+						font-size: size(18);
+					}
+				}
 
-                @include mobile {
-                    display: none;
-                }
-            }
+				@include desktop {
+					margin: size(16) size(32) size(22) size(16);
+				}
 
-            .metadata {
-                display: flex;
+				@include mobile {
+					display: none;
+				}
+			}
 
-                &__id {
-                    font-family: 'Open Sans';
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 14px;
-                    line-height: 19px;
+			.metadata {
+				display: flex;
 
-                    &--id {
-                        font-weight: 600;
-                        font-size: 14px;
-                        line-height: 19px;
-                    }
-                    
-                }
-                
-                dl {
-                    display: inline-block;
-                    margin: size(8) size(40) size(16) 0;
+				&__id {
+					font-family: "Open Sans";
+					font-style: normal;
+					font-weight: 600;
+					font-size: 14px;
+					line-height: 19px;
 
-                    @include mobile {
-                        display: flex;
-                        margin: size(6) 0;
-                        justify-content: center;
-                        align-items: baseline;
-                    }
-                }
+					&--id {
+						font-weight: 600;
+						font-size: 14px;
+						line-height: 19px;
+					}
+				}
 
-                dt,
-                dd {
-                    display: inline-block;
-                    margin: 0;
+				dl {
+					display: inline-block;
+					margin: size(8) size(40) size(16) 0;
 
-                    @include mobile {
-                        font-size: size(12) !important;
-                        line-height: size(16) !important;
-                    }
-                }
+					@include mobile {
+						display: flex;
+						margin: size(6) 0;
+						justify-content: center;
+						align-items: baseline;
+					}
+				}
 
-                dt {
-                    color: var(--mc-gray-700);
-                    font-size: size(12);
-                    font-style: normal;
-                    font-weight: normal;
-                    font-size: size(14);
+				dt,
+				dd {
+					display: inline-block;
+					margin: 0;
 
-                    line-height: size(16);
-                    text-transform: uppercase;
+					@include mobile {
+						font-size: size(12) !important;
+						line-height: size(16) !important;
+					}
+				}
 
-                    &::after {
-                        content: ':';
-                    }
-                }
+				dt {
+					color: var(--mc-gray-700);
+					font-size: size(12);
+					font-style: normal;
+					font-weight: normal;
+					font-size: size(14);
 
-                dd {
-                    font-size: size(16);
-                    font-weight: bold;
-                    line-height: size(21);
-                    margin-left: size(5);
-                    font-size: size(14);
-                    text-align: left;
+					line-height: size(16);
+					text-transform: uppercase;
 
-                    &.type {
-                        text-transform: uppercase;
-                    }
-                }
+					&::after {
+						content: ":";
+					}
+				}
 
-                @include mobile {
-                    text-align: center;
-                    flex-direction: column;
-                    padding: size(10) size(15);
-                }
-            }
+				dd {
+					font-size: size(16);
+					font-weight: bold;
+					line-height: size(21);
+					margin-left: size(5);
+					font-size: size(14);
+					text-align: left;
 
-            @include mobile {
-                flex-direction: column;
-            }
-        }
-    }
+					&.type {
+						text-transform: uppercase;
+					}
+				}
 
-    &--no-image {
-        .entity-header {
-            &__single {
-                &--content {
-                    .leftSide {
-                        @media (max-width: size(900)) {
-                            margin: 0 auto;
-                        }
+				@include mobile {
+					text-align: center;
+					flex-direction: column;
+					padding: size(10) size(15);
+				}
+			}
 
-                        .avatar {
-                            height: size(167);
-                            width: size(167);
-                            margin-top: 0;
-                            margin-left: 0;
+			@include mobile {
+				flex-direction: column;
+			}
+		}
+	}
 
-                            svg {
-                                height: size(75);
-                                width: size(75);
-                            }
+	&--no-image {
+		.entity-header {
+			&__single {
+				&--content {
+					.leftSide {
+						@media (max-width: size(900)) {
+							margin: 0 auto;
+						}
 
-                            @media (max-width: size(900)) {
-                                height: size(113);
-                                width: size(113);
+						.avatar {
+							height: size(167);
+							width: size(167);
+							margin-top: 0;
+							margin-left: 0;
 
-                                svg {
-                                    height: size(58);
-                                    width: size(58);
-                                }
-                            }
-                        }
-                    }
+							svg {
+								height: size(75);
+								width: size(75);
+							}
 
-                    .share {
-                        margin-left: 0;
-                    }
-                }
+							@media (max-width: size(900)) {
+								height: size(113);
+								width: size(113);
 
-                &--cover {
-                    aspect-ratio: unset;
-                    background: none;
-                    height: size(60);
-                }
-            }
-        }
-    }
+								svg {
+									height: size(58);
+									width: size(58);
+								}
+							}
+						}
+					}
 
-    &__edit {
-        margin: 0 auto;
-        max-width: size(1170);
-        position: relative;
+					.share {
+						margin-left: 0;
+					}
+				}
 
-        &--content {
-            align-items: baseline;
-            display: flex;
-            justify-content: space-between;
-            padding: size(74) size(16) size(61);
+				&--cover {
+					aspect-ratio: unset;
+					background: none;
+					height: size(60);
+				}
+			}
+		}
+	}
 
-            .title {
-                align-items: center;
-                display: grid;
-                gap: size(18);
-                grid-template-columns: size(72) calc(100% - size(90));
+	&__edit {
+		margin: 0 auto;
+		max-width: size(1170);
+		position: relative;
 
-                .icon {
-                    align-items: center;
-                    border-radius: 50%;
-                    display: flex;
-                    height: size(72);
-                    justify-content: center;
-                    width: size(72);
+		&--content {
+			align-items: baseline;
+			display: flex;
+			justify-content: space-between;
+			padding: size(74) size(16) size(61);
 
-                    .iconify {
-                        font-size: size(40);
-                        color: var(--mc-white);
-                    }
-                }
-            }
+			.title {
+				align-items: center;
+				display: grid;
+				gap: size(18);
+				grid-template-columns: size(72) calc(100% - size(90));
 
-            @media screen and (max-width: size(800)) {
-                justify-content: flex-start;
-                padding: size(60) size(16) size(20);
+				.icon {
+					align-items: center;
+					border-radius: 50%;
+					display: flex;
+					height: size(72);
+					justify-content: center;
+					width: size(72);
 
-                .title {
-                    grid-template-columns: size(52) calc(100% - size(70));
+					.iconify {
+						font-size: size(40);
+						color: var(--mc-white);
+					}
+				}
+			}
 
-                    .icon {
-                        height: size(52);
-                        width: size(52);
+			@media screen and (max-width: size(800)) {
+				justify-content: flex-start;
+				padding: size(60) size(16) size(20);
 
-                        .iconify {
-                            font-size: size(30);
-                        }
-                    }
+				.title {
+					grid-template-columns: size(52) calc(100% - size(70));
 
-                    h2 {
-                        font-weight: 700;
-                        font-size: size(18);
-                        line-height: size(25);
-                    }
-                }
+					.icon {
+						height: size(52);
+						width: size(52);
 
-                .button {
-                    display: none;
-                }
-            }
+						.iconify {
+							font-size: size(30);
+						}
+					}
 
-            @media screen and (max-width: size(500)) {
-                .title {
-                    grid-template-columns: size(32) calc(100% - size(50));
+					h2 {
+						font-weight: 700;
+						font-size: size(18);
+						line-height: size(25);
+					}
+				}
 
-                    .icon {
-                        height: size(32);
-                        width: size(32);
+				.button {
+					display: none;
+				}
+			}
 
-                        .iconify {
-                            font-size: size(18);
-                        }
-                    }
+			@media screen and (max-width: size(500)) {
+				.title {
+					grid-template-columns: size(32) calc(100% - size(50));
 
-                    h2 {
-                        font-weight: 700;
-                        font-size: 18px;
-                        line-height: 25px;
-                    }
-                }
-            }
-        }
-    }
+					.icon {
+						height: size(32);
+						width: size(32);
+
+						.iconify {
+							font-size: size(18);
+						}
+					}
+
+					h2 {
+						font-weight: 700;
+						font-size: 18px;
+						line-height: 25px;
+					}
+				}
+			}
+		}
+	}
 }
