Task 141. Alterei o texto do card de eventos dentro do painel de controler para parecer que é um link

--- a/src/themes/BaseV2/assets-src/sass/2.components/_panel--entities-summary.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_panel--entities-summary.scss
@@ -67,6 +67,14 @@
                 font-size: size(14);
                 line-height: size(19);
             }
+            
+            &--events{
+                text-decoration: underline;
+                text-decoration-thickness: 2px;
+                cursor: pointer;
+                color: #117c83;
+            }
+
         }
 
         .agent-summary {
