ajeitei cores e tamanhos no scss

--- a/src/themes/BaseV2/assets-src/sass/2.components/_container.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_container.scss
@@ -149,3 +149,10 @@ $col-columns: 12;
         flex-direction: column;
     }
 }
+
+.edit--profile{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: size(15);
+}
