--- a/src/themes/BaseV2/assets-src/sass/layouts/_entity.scss
+++ b/src/themes/BaseV2/assets-src/sass/layouts/_entity.scss
@@ -24,6 +24,10 @@
     .divider {
         width: 100%;
         border-bottom: size(1) solid var(--mc-high-700);
+        &--data{
+            margin-top: 40px;
+            margin-bottom: 40px;   
+        }
     }
 
     &.action-edit {
