ajeites mais um accordion

--- a/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
@@ -52,6 +52,7 @@
 
     .black-content{
         color: black;
+        font-weight: bold;
     }
     .mc-accordion{
         &__content, &__header {
