(add) import do novo arquivo .scss

--- a/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
+++ b/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
@@ -136,6 +136,7 @@
 @import '2.components/panel--open-opportunities';
 @import '2.components/panel--pending-evaluations';
 @import '2.components/panel-home';
+@import '2.components/panel-seal-relations-tabs';
 @import '2.components/panel-sidebar';
 @import '2.components/panel';
 @import '2.components/permission-publish';
