tooltip quase pronta

--- a/src/themes/BaseV2/assets-src/sass/2.components/_entity-terms.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_entity-terms.scss
@@ -171,4 +171,12 @@
         }
     }
 
+    &__edit-agent h4{
+        font-family: var(--mc-font-headings);
+        font-size: 0.875rem;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 1.1875rem;
+    }
+
 }
