Adiciona novo tema

--- a/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
+++ b/src/themes/BaseV2/assets-src/sass/theme-BaseV2.scss
@@ -198,3 +198,5 @@
 @import 'pages/form-preview';
 @import 'pages/system-roles';
 @import 'pages/system-roles-modal';
+// @import 'pages/theme-customizer';
+@import 'pages/user-detail';
