--- a/src/themes/BaseV2/assets-src/sass/2.components/_field.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_field.scss
@@ -128,6 +128,7 @@
         font-size: var(--mc-font-size-xxs);
         line-height: normal;
         padding: size(14);
+        padding-left: 30px;
         width: 100%;
 
         &.dp__input {
