--- a/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
@@ -1,6 +1,11 @@
 @use '../0.settings/mixins'as *;
 
 .popover {
+    
+    &__avatar path{
+        fill: currentcolor;
+        d: path("M 12 2 C 6.48 2 2 6.48 2 12 s 4.48 10 10 10 s 10 -4.48 10 -10 S 17.52 2 12 2 m 1 17 h -2 v -2 h 2 Z m 2.07 -7.75 l -0.9 0.92 C 13.45 12.9 13 13.5 13 15 h -2 v -0.5 c 0 -1.1 0.45 -2.1 1.17 -2.83 l 1.24 -1.26 c 0.37 -0.36 0.59 -0.86 0.59 -1.41 c 0 -1.1 -0.9 -2 -2 -2 s -2 0.9 -2 2 H 8 c 0 -2.21 1.79 -4 4 -4 s 4 1.79 4 4 c 0 0.88 -0.36 1.68 -0.93 2.25");        
+    }
     &__content {
         position: relative;
         padding: size(16) size(16);
@@ -27,5 +32,38 @@
             display: flex;
             gap: size(10);
         }
+    }
+}
+
+.flex-container {
+    display: flex;
+    // align-items: center; // Align items vertically
+    gap: size(5); // Adjust spacing between items
+    // width: 100%;
+    flex-direction: row;
+    align-items: flex-start;
+    // flex-wrap: nowrap;
+
+    .popover {
+        // flex-shrink: 0; // Prevent the popover from shrinking
+        // margin-right: 10px;
+        // align-items: flex-start
+        // margin-right: 10px; /* Space between components */
+        // margin-left: -50px;
+        &__avatar{
+            &__tag path{
+                fill: currentcolor;
+                d: path("M 12 2 C 6.48 2 2 6.48 2 12 s 4.48 10 10 10 s 10 -4.48 10 -10 S 17.52 2 12 2 m 1 17 h -2 v -2 h 2 Z m 2.07 -7.75 l -0.9 0.92 C 13.45 12.9 13 13.5 13 15 h -2 v -0.5 c 0 -1.1 0.45 -2.1 1.17 -2.83 l 1.24 -1.26 c 0.37 -0.36 0.59 -0.86 0.59 -1.41 c 0 -1.1 -0.9 -2 -2 -2 s -2 0.9 -2 2 H 8 c 0 -2.21 1.79 -4 4 -4 s 4 1.79 4 4 c 0 0.88 -0.36 1.68 -0.93 2.25");
+            }
+            &__tag{
+                margin-left: -115px;
+            }
+        }
+    }
+
+    .entity-terms__edit-agent {
+        // flex: 0; // Allow the entity-terms component to take up remaining space
+        // margin-left: -50px;  
+
     }
 }
