mudanças nos tooltip quase finalizadas e ajuste nos icones das redes socias

--- a/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
@@ -28,6 +28,11 @@
         background: var(--mc-white);
         border-top: 2px solid #bbbbbb;
         max-width: size(870);
+
+        .left--placeholder input{
+            padding-left: 30px;
+            padding-top: 15px;
+        }
         
     }
     // &__context {
