ToolTips finalizados, ajeitei icones para ter tamanhos padrões, ajeitei erros de css

--- a/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_mc-accordion.scss
@@ -76,7 +76,7 @@
     
     .iconify--fluent{
         color: #217c83;
-        font-size: size(50);
+        // font-size: size(50);
     }
 
     .entity-profile__profile--img{
