Pequenos ajustes CSS, página finalizada (sem a parte do campo de tipos de deficiencia)

--- a/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_agent-data.scss
@@ -129,6 +129,29 @@
         }
     }
 
+    .itinerante {
+        position: relative;
+        div.field.col-6.sm\:col-12 > label:nth-child(2){
+            left: 0px;
+        }
+        div.field.col-6.sm\:col-12 > label:nth-child(3){
+            left: 145px;
+        }
+        div.field.col-6.sm\:col-12 > label:nth-child(4){
+            left: 222px;
+        }
+        .input__label{
+            display: inline-block;
+            margin-right: 35px;
+            margin-top: 30px;
+            position: absolute;
+        }
+
+        input{
+            margin-right: 10px;
+        }
+    }   
+
     /* .field {
         label {
             margin: 0;
