--- a/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
@@ -36,6 +36,7 @@
     gap: size(5);
     flex-direction: row;
     align-items: flex-start;
+    margin-top: 0px;
 
     .entity-terms{
         .v-popper--theme-dropdown{
@@ -60,26 +61,26 @@
     margin-top: 0rem;
 }
 
-//unique popover name
+// tooltip unique popover name
 div:nth-child(4).col-12.popover__area > div.flex-container.question > div:nth-child(1) > div{
     position: absolute;
     left: 120px;
     top: 5px;
 }
 
-// unique popover area
+// tooltip unique popover area
 div:nth-child(5).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 145px;
 }
 
-// unique popover funcao
+// tooltip  unique popover funcao
 div:nth-child(6).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 173px;
 }
 
-//unique popover tag
+// tooltip unique popover tag
 div:nth-child(7).col-12.popover__area > div.flex-container.question > div:nth-child(2) > div{
     position: absolute;
     left: 49px;
@@ -88,17 +89,26 @@ div:nth-child(7).col-12.popover__area > div.flex-container.question > div:nth-ch
 //unique local de endereço
 div > div:nth-child(1) > div.flex-container.endereco > div > div{
     position: relative;
-    left: 171px;
-    top: 46px;
+    // left: 171px;
+    // top: 46px;
 }
 
 //unique agente itinerante
 div > div:nth-child(1) > div.flex-container.col-12.itinerante > div > div{
     position: relative;
-    left: 140px;
-    top: 43px;
+    left: 139px;
+    top: 28px;
 }
 
 .popover__area{
     position: relative;
+}
+
+// tooltip Dados de endereço
+div:nth-child(1) > div.flex-container.endereco.col-12 > div:nth-child(1) > div{
+    position: relative;
+    top: 32px;
+    left: 171px;
+    padding-top: 0px;
+    margin-top: 0px;
 }
