--- a/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
+++ b/src/themes/BaseV2/assets-src/sass/2.components/_popover.scss
@@ -111,4 +111,5 @@ div:nth-child(1) > div.flex-container.endereco.col-12 > div:nth-child(1) > div{
     left: 171px;
     padding-top: 0px;
     margin-top: 0px;
+    z-index: 9999;
 }
